src/test/ui/consts/const_arg_promotable.stderr
error: argument 1 is required to be a constant
  --> $DIR/const_arg_promotable.rs:7:5
   |
LL |     foo(*&mut 42)
   |     ^^^^^^^^^^^^^

error: aborting due to previous error

